移除自定义字体，备案号，文章链接后缀为 html

--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -4,7 +4,9 @@
   <% } %>
   <div class="outer">
     <div id="footer-info" class="inner">
-      &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
+      &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
+      <a target="_blank" href="http://www.beian.miit.gov.cn/">京ICP备18033139号</a>
+      <br>
       <%= __('powered_by') %> <a href="https://hexo.io/" target="_blank">Hexo</a>
     </div>
   </div>
