[统计] 百度统计

--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -1,6 +1,5 @@
 <head>
   <meta charset="utf-8">
-  <%- partial('google-analytics') %>
   <%
   var title = page.title;
 
@@ -31,4 +30,6 @@
   <% if (theme.fancybox){ %>
     <%- css('fancybox/jquery.fancybox.min.css') %>
   <% } %>
+  <%- partial('baidu-tongji') %>
+  <%- partial('google-analytics') %>
 </head>
