--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -5,7 +5,7 @@
   <div class="outer">
     <div id="footer-info" class="inner">
       &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
-      <a target="_blank" href="http://www.beian.miit.gov.cn/">京ICP备18033139号</a>
+      <a target="_blank" href="https://beian.miit.gov.cn/">京ICP备18033139号-2</a>
       <br>
       <%= __('powered_by') %> <a href="https://hexo.io/" target="_blank">Hexo</a>
     </div>
